fixing hamburger menu gap, heading margin top and bottom

--- a/themes/mffs-theme/sass/_navigation.scss
+++ b/themes/mffs-theme/sass/_navigation.scss
@@ -161,7 +161,7 @@ a {
     opacity: 1;
     height: 100vh;
     position: absolute;
-    top: 59px; //dani: pushing bckground with opacity down
+    top: 106px; //dani: pushing bckground with opacity down
     left: 0;
     right: 0;
     bottom: 0;
