--- a/themes/mffs-theme/sass/_page-templates.scss
+++ b/themes/mffs-theme/sass/_page-templates.scss
@@ -30,6 +30,9 @@ ul {
 }
 .home {
   .stories {
+    h2{
+      margin: .8rem 0;
+    }
     @include desktop {
       position: relative;
       margin-top: 3rem;
