--- a/themes/mffs-theme/style.css
+++ b/themes/mffs-theme/style.css
@@ -388,7 +388,7 @@ a {
   opacity: 1;
   height: 100vh;
   position: absolute;
-  top: 59px;
+  top: 106px;
   left: 0;
   right: 0;
   bottom: 0;
@@ -675,6 +675,9 @@ ul {
       .story-info p:nth-of-type(2) {
         text-align: center; } }
 
+.home .stories h2 {
+  margin: .8rem 0; }
+
 @media only screen and (min-width: 620px) {
   .home .stories {
     position: relative;
@@ -704,7 +707,7 @@ ul {
   width: 35%;
   margin-left: auto;
   margin-right: auto;
-  padding: .5rem 0rem; }
+  padding: 0.5rem 0rem; }
   .home .main-carousel .carousel-cell a:hover {
     background: #f1d18a;
     color: #000; }
